updates of towns

--- a/notebooks/jupyter/Clean_Data.ipynb
+++ b/notebooks/jupyter/Clean_Data.ipynb
@@ -6,13 +6,15 @@
    "source": [
     "# Notebook to Clean Data\n",
     "\n",
-    "20181206 - Cleaned 20181204 & 20181205 GRUMP and WP data for AGU\n",
-    "20181205 = Used '20181206_osm_africa_cities.csv' to match osm IDs with pop"
+    "2019 - 01 - 21\n",
+    "Notebook to clean final osm cities and towns\n",
+    "1. merge files\n",
+    "2. drop duplicates \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,76 +26,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "temp_data = '../../temp_data/'\n",
     "\n",
-    "africa_cont = 'Africa.shp'\n",
-    "africa_region = 'Africa_region.shp'\n",
-    "pop_file = '20181205_GRUMP2015_zone_pop.csv'"
+    "city_file = 'AFR_PPP_2015_adj_v2_1500c300_polyoverlap.shp'\n",
+    "town_file = 'AFR_PPP_2015_adj_v2_1500c300_polyoverlap_towns.shp'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load Files\n",
-    "africa_count_gdf = gpd.read_file(temp_data+africa_cont)\n",
-    "africa_region_gdf = gpd.read_file(temp_data+africa_region)\n",
-    "pop_df = pd.read_csv(temp_data+pop_file)"
+    "city = gpd.read_file(temp_data+city_file)\n",
+    "town = gpd.read_file(temp_data+town_file)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(362, 5)"
-      ]
-     },
-     "execution_count": 124,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pop_df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_points (file):\n",
-    "    \"\"\" This function loads a csv of points and turns it into shapely points\"\"\"\n",
-    "    df = pd.read_csv(file)\n",
-    "\n",
-    "    # creating a geometry column \n",
-    "    geometry = [Point(xy) for xy in zip(df['lon'], df['lat'])]\n",
-    "\n",
-    "    # Coordinate reference system : WGS84\n",
-    "    crs = {'init': 'epsg:4326'}\n",
-    "\n",
-    "    # Creating a Geographic data frame \n",
-    "    point_gdf = gpd.GeoDataFrame(df, crs=crs, geometry=geometry)\n",
-    "    \n",
-    "    return point_gdf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {},
-   "outputs": [
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(700, 8)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -115,7 +80,11 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id</th>\n",
+       "      <th>osm_id</th>\n",
+       "      <th>FID</th>\n",
+       "      <th>country</th>\n",
+       "      <th>city</th>\n",
+       "      <th>osm_type</th>\n",
        "      <th>lat</th>\n",
        "      <th>lon</th>\n",
        "      <th>geometry</th>\n",
@@ -125,74 +94,100 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>27564946</td>\n",
+       "      <td>1065</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Constantine</td>\n",
+       "      <td>city</td>\n",
        "      <td>36.364519</td>\n",
        "      <td>6.608260</td>\n",
-       "      <td>POINT (6.60826 36.364519)</td>\n",
+       "      <td>POLYGON ((6.616249 36.474584, 6.649583 36.4745...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>27565103</td>\n",
+       "      <td>2174</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Oran</td>\n",
+       "      <td>city</td>\n",
        "      <td>35.703275</td>\n",
        "      <td>-0.649298</td>\n",
-       "      <td>POINT (-0.6492975999999999 35.7032751)</td>\n",
+       "      <td>POLYGON ((-0.808751 35.774584, -0.792084 35.77...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>253292160</td>\n",
+       "      <td>350</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Tizi Ouzou</td>\n",
+       "      <td>city</td>\n",
        "      <td>36.713784</td>\n",
        "      <td>4.049392</td>\n",
-       "      <td>POINT (4.0493919 36.7137843)</td>\n",
+       "      <td>POLYGON ((3.966249 36.774584, 3.982916 36.7745...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>262963217</td>\n",
+       "      <td>4347</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>El Oued</td>\n",
+       "      <td>city</td>\n",
        "      <td>33.361177</td>\n",
        "      <td>6.860349</td>\n",
-       "      <td>POINT (6.8603492 33.3611766)</td>\n",
+       "      <td>POLYGON ((6.816249 33.424584, 6.841249 33.4245...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>262964638</td>\n",
+       "      <td>4437</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Touggourt</td>\n",
+       "      <td>city</td>\n",
        "      <td>33.109897</td>\n",
        "      <td>6.066102</td>\n",
-       "      <td>POINT (6.066102 33.1098968)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>264573224</td>\n",
-       "      <td>33.806352</td>\n",
-       "      <td>2.880862</td>\n",
-       "      <td>POINT (2.8808616 33.8063518)</td>\n",
+       "      <td>POLYGON ((6.066249 33.16625, 6.082916 33.16625...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          id        lat       lon                                geometry\n",
-       "0   27564946  36.364519  6.608260               POINT (6.60826 36.364519)\n",
-       "1   27565103  35.703275 -0.649298  POINT (-0.6492975999999999 35.7032751)\n",
-       "2  253292160  36.713784  4.049392            POINT (4.0493919 36.7137843)\n",
-       "3  262963217  33.361177  6.860349            POINT (6.8603492 33.3611766)\n",
-       "4  262964638  33.109897  6.066102             POINT (6.066102 33.1098968)\n",
-       "5  264573224  33.806352  2.880862            POINT (2.8808616 33.8063518)"
+       "      osm_id   FID  country         city osm_type        lat       lon  \\\n",
+       "0   27564946  1065  Algeria  Constantine     city  36.364519  6.608260   \n",
+       "1   27565103  2174  Algeria         Oran     city  35.703275 -0.649298   \n",
+       "2  253292160   350  Algeria   Tizi Ouzou     city  36.713784  4.049392   \n",
+       "3  262963217  4347  Algeria      El Oued     city  33.361177  6.860349   \n",
+       "4  262964638  4437  Algeria    Touggourt     city  33.109897  6.066102   \n",
+       "\n",
+       "                                            geometry  \n",
+       "0  POLYGON ((6.616249 36.474584, 6.649583 36.4745...  \n",
+       "1  POLYGON ((-0.808751 35.774584, -0.792084 35.77...  \n",
+       "2  POLYGON ((3.966249 36.774584, 3.982916 36.7745...  \n",
+       "3  POLYGON ((6.816249 33.424584, 6.841249 33.4245...  \n",
+       "4  POLYGON ((6.066249 33.16625, 6.082916 33.16625...  "
       ]
      },
-     "execution_count": 120,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "osm_point_gdf = load_points(temp_data+'20181129_osm_africa_cities.csv')\n",
-    "osm_point_gdf.head(6)"
+    "print(city.shape)\n",
+    "city.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3154, 8)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -214,135 +209,130 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>lat</th>\n",
-       "      <th>lon</th>\n",
-       "      <th>geometry_x</th>\n",
-       "      <th>Unnamed: 0</th>\n",
        "      <th>osm_id</th>\n",
        "      <th>FID</th>\n",
-       "      <th>geometry_y</th>\n",
-       "      <th>GRUMP2015_PopTot</th>\n",
+       "      <th>country</th>\n",
+       "      <th>city</th>\n",
+       "      <th>osm_type</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>geometry</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>27564946</td>\n",
-       "      <td>36.364519</td>\n",
-       "      <td>6.608260</td>\n",
-       "      <td>POINT (6.60826 36.364519)</td>\n",
-       "      <td>0</td>\n",
-       "      <td>27564946</td>\n",
-       "      <td>301</td>\n",
-       "      <td>POLYGON ((6.508333 36.475, 6.525 36.475, 6.525...</td>\n",
-       "      <td>8.080542e+05</td>\n",
+       "      <td>89369215</td>\n",
+       "      <td>11918</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Tamanrasset</td>\n",
+       "      <td>town</td>\n",
+       "      <td>22.785454</td>\n",
+       "      <td>5.532446</td>\n",
+       "      <td>POLYGON ((5.499583 22.81625, 5.541249 22.81625...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>27565103</td>\n",
-       "      <td>35.703275</td>\n",
-       "      <td>-0.649298</td>\n",
-       "      <td>POINT (-0.6492975999999999 35.7032751)</td>\n",
-       "      <td>1</td>\n",
-       "      <td>27565103</td>\n",
-       "      <td>582</td>\n",
-       "      <td>POLYGON ((-0.808333 35.775, -0.791667 35.775, ...</td>\n",
-       "      <td>1.359337e+06</td>\n",
+       "      <td>89980948</td>\n",
+       "      <td>10871</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>In Salah</td>\n",
+       "      <td>town</td>\n",
+       "      <td>27.195033</td>\n",
+       "      <td>2.482613</td>\n",
+       "      <td>POLYGON ((2.474583 27.224584, 2.482916 27.2245...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>262963217</td>\n",
-       "      <td>33.361177</td>\n",
-       "      <td>6.860349</td>\n",
-       "      <td>POINT (6.8603492 33.3611766)</td>\n",
-       "      <td>2</td>\n",
-       "      <td>262963217</td>\n",
-       "      <td>1419</td>\n",
-       "      <td>POLYGON ((6.883333 33.433333, 6.9 33.433333, 6...</td>\n",
-       "      <td>1.580997e+05</td>\n",
+       "      <td>252600742</td>\n",
+       "      <td>242</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Boumerdès</td>\n",
+       "      <td>town</td>\n",
+       "      <td>36.758882</td>\n",
+       "      <td>3.470596</td>\n",
+       "      <td>POLYGON ((2.999583 36.824584, 3.016249 36.8245...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>288387133</td>\n",
-       "      <td>36.733768</td>\n",
-       "      <td>3.086179</td>\n",
-       "      <td>POINT (3.0861789 36.7337682)</td>\n",
-       "      <td>3</td>\n",
-       "      <td>288387133</td>\n",
-       "      <td>83</td>\n",
-       "      <td>POLYGON ((3.008333 36.825, 3.016667 36.825, 3....</td>\n",
-       "      <td>5.040620e+06</td>\n",
+       "      <td>253167052</td>\n",
+       "      <td>242</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Thenia</td>\n",
+       "      <td>town</td>\n",
+       "      <td>36.724986</td>\n",
+       "      <td>3.556935</td>\n",
+       "      <td>POLYGON ((2.999583 36.824584, 3.016249 36.8245...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>288417925</td>\n",
-       "      <td>36.265344</td>\n",
-       "      <td>2.766957</td>\n",
-       "      <td>POINT (2.766957 36.265344)</td>\n",
-       "      <td>4</td>\n",
-       "      <td>288417925</td>\n",
-       "      <td>338</td>\n",
-       "      <td>POLYGON ((2.75 36.341667, 2.758333 36.341667, ...</td>\n",
-       "      <td>1.494868e+05</td>\n",
+       "      <td>253167208</td>\n",
+       "      <td>242</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Zemmouri</td>\n",
+       "      <td>town</td>\n",
+       "      <td>36.786406</td>\n",
+       "      <td>3.601221</td>\n",
+       "      <td>POLYGON ((2.999583 36.824584, 3.016249 36.8245...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          id        lat       lon                              geometry_x  \\\n",
-       "0   27564946  36.364519  6.608260               POINT (6.60826 36.364519)   \n",
-       "1   27565103  35.703275 -0.649298  POINT (-0.6492975999999999 35.7032751)   \n",
-       "2  262963217  33.361177  6.860349            POINT (6.8603492 33.3611766)   \n",
-       "3  288387133  36.733768  3.086179            POINT (3.0861789 36.7337682)   \n",
-       "4  288417925  36.265344  2.766957              POINT (2.766957 36.265344)   \n",
+       "      osm_id    FID  country         city osm_type        lat       lon  \\\n",
+       "0   89369215  11918  Algeria  Tamanrasset     town  22.785454  5.532446   \n",
+       "1   89980948  10871  Algeria     In Salah     town  27.195033  2.482613   \n",
+       "2  252600742    242  Algeria    Boumerdès     town  36.758882  3.470596   \n",
+       "3  253167052    242  Algeria       Thenia     town  36.724986  3.556935   \n",
+       "4  253167208    242  Algeria     Zemmouri     town  36.786406  3.601221   \n",
        "\n",
-       "   Unnamed: 0     osm_id   FID  \\\n",
-       "0           0   27564946   301   \n",
-       "1           1   27565103   582   \n",
-       "2           2  262963217  1419   \n",
-       "3           3  288387133    83   \n",
-       "4           4  288417925   338   \n",
-       "\n",
-       "                                          geometry_y  GRUMP2015_PopTot  \n",
-       "0  POLYGON ((6.508333 36.475, 6.525 36.475, 6.525...      8.080542e+05  \n",
-       "1  POLYGON ((-0.808333 35.775, -0.791667 35.775, ...      1.359337e+06  \n",
-       "2  POLYGON ((6.883333 33.433333, 6.9 33.433333, 6...      1.580997e+05  \n",
-       "3  POLYGON ((3.008333 36.825, 3.016667 36.825, 3....      5.040620e+06  \n",
-       "4  POLYGON ((2.75 36.341667, 2.758333 36.341667, ...      1.494868e+05  "
+       "                                            geometry  \n",
+       "0  POLYGON ((5.499583 22.81625, 5.541249 22.81625...  \n",
+       "1  POLYGON ((2.474583 27.224584, 2.482916 27.2245...  \n",
+       "2  POLYGON ((2.999583 36.824584, 3.016249 36.8245...  \n",
+       "3  POLYGON ((2.999583 36.824584, 3.016249 36.8245...  \n",
+       "4  POLYGON ((2.999583 36.824584, 3.016249 36.8245...  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "merge_df = pd.merge(osm_point_gdf, pop_df, left_on = 'id', right_on = 'osm_id', how = 'inner')\n",
-    "#merge_df = pd.merge(osm_df, pop_df[['FID', 'geometry', 'GRUMP2015_PopTot']], on = 'osm_id')\n",
-    "merge_df.head()"
+    "print(town.shape)\n",
+    "town.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(325, 9)"
+       "(3854, 8)"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# merge_df = pd.merge(osm_df, pop_df[['osm_id','FID', 'geometry', 'GRUMP2015_PopTot']], on = 'osm_id')\n",
-    "merge_df.shape"
+    "urban_concat = pd.concat([town, city])\n",
+    "urban_concat.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "urban_concat.to_file(temp_data+'AFR_PPP_2015_adj_v2_urbanmerge_test.shp', driver='ESRI Shapefile')"
    ]
   }
  ],
