--- a/notebooks/jupyter/New_PolyPoints-GHS2000B-1.ipynb
+++ b/notebooks/jupyter/New_PolyPoints-GHS2000B-1.ipynb
@@ -1310,14 +1310,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "764\n"
+      "1108\n"
      ]
     }
    ],
@@ -1327,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 46,
    "metadata": {
     "scrolled": true
    },
@@ -1366,69 +1366,69 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>298699084</td>\n",
-       "      <td>33555</td>\n",
-       "      <td>POLYGON ((29.53825632255626 -3.284048461874624...</td>\n",
-       "      <td>Burundi</td>\n",
-       "      <td>Bugarama</td>\n",
+       "      <td>1229049286</td>\n",
+       "      <td>38706</td>\n",
+       "      <td>POLYGON ((44.42082674714306 -12.12556735161982...</td>\n",
+       "      <td>Comoros</td>\n",
+       "      <td>Ouani أواني</td>\n",
        "      <td>town</td>\n",
-       "      <td>-3.290885</td>\n",
-       "      <td>29.546303</td>\n",
+       "      <td>-12.133989</td>\n",
+       "      <td>44.427228</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>498658946</td>\n",
-       "      <td>34471</td>\n",
-       "      <td>POLYGON ((29.59956278912686 -4.295861698019578...</td>\n",
-       "      <td>Burundi</td>\n",
-       "      <td>Nyanza Lac</td>\n",
+       "      <td>2317482076</td>\n",
+       "      <td>38746</td>\n",
+       "      <td>POLYGON ((43.72671407573346 -12.26426428118265...</td>\n",
+       "      <td>Comoros</td>\n",
+       "      <td>جويزي Djoiezi</td>\n",
        "      <td>town</td>\n",
-       "      <td>-4.338476</td>\n",
-       "      <td>29.604684</td>\n",
+       "      <td>-12.302528</td>\n",
+       "      <td>43.771948</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>498680748</td>\n",
-       "      <td>33273</td>\n",
-       "      <td>POLYGON ((29.60362216849698 -3.025092241524026...</td>\n",
-       "      <td>Burundi</td>\n",
-       "      <td>Matongo</td>\n",
+       "      <td>2317482083</td>\n",
+       "      <td>38746</td>\n",
+       "      <td>POLYGON ((43.72671407573346 -12.26426428118265...</td>\n",
+       "      <td>Comoros</td>\n",
+       "      <td>فومبوني Fomboni</td>\n",
        "      <td>town</td>\n",
-       "      <td>-3.068349</td>\n",
-       "      <td>29.610627</td>\n",
+       "      <td>-12.284101</td>\n",
+       "      <td>43.741686</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>801770794</td>\n",
-       "      <td>33596</td>\n",
-       "      <td>POLYGON ((29.26902379481733 -3.308326895141048...</td>\n",
-       "      <td>Burundi</td>\n",
-       "      <td>Gatumba</td>\n",
+       "      <td>2317482086</td>\n",
+       "      <td>38737</td>\n",
+       "      <td>POLYGON ((43.66431958245191 -12.2479455531321,...</td>\n",
+       "      <td>Comoros</td>\n",
+       "      <td>هواني Hoani</td>\n",
        "      <td>town</td>\n",
-       "      <td>-3.334882</td>\n",
-       "      <td>29.252963</td>\n",
+       "      <td>-12.258365</td>\n",
+       "      <td>43.675036</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1343329007</td>\n",
-       "      <td>33988</td>\n",
-       "      <td>POLYGON ((29.6874822703621 -3.761567950260673,...</td>\n",
-       "      <td>Burundi</td>\n",
-       "      <td>Matana</td>\n",
+       "      <td>2317482090</td>\n",
+       "      <td>38755</td>\n",
+       "      <td>POLYGON ((43.62884572117553 -12.29690289679195...</td>\n",
+       "      <td>Comoros</td>\n",
+       "      <td>ميرينكوني Miringoni</td>\n",
        "      <td>town</td>\n",
-       "      <td>-3.767014</td>\n",
-       "      <td>29.689410</td>\n",
+       "      <td>-12.302287</td>\n",
+       "      <td>43.636605</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>1343430505</td>\n",
-       "      <td>33905</td>\n",
-       "      <td>POLYGON ((29.60505035703024 -3.640155693471951...</td>\n",
-       "      <td>Burundi</td>\n",
-       "      <td>Mugamba</td>\n",
+       "      <td>2317482092</td>\n",
+       "      <td>38768</td>\n",
+       "      <td>POLYGON ((43.70642045719136 -12.36218478134473...</td>\n",
+       "      <td>Comoros</td>\n",
+       "      <td>نيومشوا Nioumachoua</td>\n",
        "      <td>town</td>\n",
-       "      <td>-3.665005</td>\n",
-       "      <td>29.586578</td>\n",
+       "      <td>-12.364451</td>\n",
+       "      <td>43.717896</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1436,23 +1436,23 @@
       ],
       "text/plain": [
        "       osm_id    FID                                           geometry  \\\n",
-       "0   298699084  33555  POLYGON ((29.53825632255626 -3.284048461874624...   \n",
-       "1   498658946  34471  POLYGON ((29.59956278912686 -4.295861698019578...   \n",
-       "2   498680748  33273  POLYGON ((29.60362216849698 -3.025092241524026...   \n",
-       "3   801770794  33596  POLYGON ((29.26902379481733 -3.308326895141048...   \n",
-       "4  1343329007  33988  POLYGON ((29.6874822703621 -3.761567950260673,...   \n",
-       "5  1343430505  33905  POLYGON ((29.60505035703024 -3.640155693471951...   \n",
+       "0  1229049286  38706  POLYGON ((44.42082674714306 -12.12556735161982...   \n",
+       "1  2317482076  38746  POLYGON ((43.72671407573346 -12.26426428118265...   \n",
+       "2  2317482083  38746  POLYGON ((43.72671407573346 -12.26426428118265...   \n",
+       "3  2317482086  38737  POLYGON ((43.66431958245191 -12.2479455531321,...   \n",
+       "4  2317482090  38755  POLYGON ((43.62884572117553 -12.29690289679195...   \n",
+       "5  2317482092  38768  POLYGON ((43.70642045719136 -12.36218478134473...   \n",
        "\n",
-       "   country        city osm_type       lat        lon  \n",
-       "0  Burundi    Bugarama     town -3.290885  29.546303  \n",
-       "1  Burundi  Nyanza Lac     town -4.338476  29.604684  \n",
-       "2  Burundi     Matongo     town -3.068349  29.610627  \n",
-       "3  Burundi     Gatumba     town -3.334882  29.252963  \n",
-       "4  Burundi      Matana     town -3.767014  29.689410  \n",
-       "5  Burundi     Mugamba     town -3.665005  29.586578  "
+       "   country                 city osm_type        lat        lon  \n",
+       "0  Comoros          Ouani أواني     town -12.133989  44.427228  \n",
+       "1  Comoros        جويزي Djoiezi     town -12.302528  43.771948  \n",
+       "2  Comoros      فومبوني Fomboni     town -12.284101  43.741686  \n",
+       "3  Comoros          هواني Hoani     town -12.258365  43.675036  \n",
+       "4  Comoros  ميرينكوني Miringoni     town -12.302287  43.636605  \n",
+       "5  Comoros  نيومشوا Nioumachoua     town -12.364451  43.717896  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1463,11 +1463,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#poly_overlap_out.to_file(temp_data+'GHS_POP_GPW42000_GLOBE_R2015A_54009_1k_v1_0_Clip_1500c300_subB2.shp', driver='ESRI Shapefile')"
+    "poly_overlap_out.to_file(temp_data+'GHS_POP_GPW42000_GLOBE_R2015A_54009_1k_v1_0_Clip_1500c300_subB2.shp', driver='ESRI Shapefile')"
    ]
   }
  ],
