zone stats done

--- a/notebooks/jupyter/Clean_Data.ipynb
+++ b/notebooks/jupyter/Clean_Data.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "4  POLYGON ((6.064548898662129 33.15645433151028,...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3220, 8)\n"
+      "(3058, 8)\n"
      ]
     },
     {
@@ -260,76 +260,76 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>89369215</td>\n",
-       "      <td>5382</td>\n",
+       "      <td>16863</td>\n",
        "      <td>Algeria</td>\n",
        "      <td>Tamanrasset</td>\n",
        "      <td>town</td>\n",
        "      <td>22.785454</td>\n",
        "      <td>5.532446</td>\n",
-       "      <td>POLYGON ((5.512930562910484 22.80475188764244,...</td>\n",
+       "      <td>POLYGON ((5.523842554283844 22.82143812548671,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>252600742</td>\n",
-       "      <td>624</td>\n",
+       "      <td>187</td>\n",
        "      <td>Algeria</td>\n",
        "      <td>Boumerdès</td>\n",
        "      <td>town</td>\n",
        "      <td>36.758882</td>\n",
        "      <td>3.470596</td>\n",
-       "      <td>POLYGON ((2.960095682991406 36.82071885667166,...</td>\n",
+       "      <td>POLYGON ((3.879862753261432 36.92634664178389,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>253167052</td>\n",
-       "      <td>195</td>\n",
+       "      <td>187</td>\n",
        "      <td>Algeria</td>\n",
        "      <td>Thenia</td>\n",
        "      <td>town</td>\n",
        "      <td>36.724986</td>\n",
        "      <td>3.556935</td>\n",
-       "      <td>POLYGON ((3.610972972741118 36.75033076389462,...</td>\n",
+       "      <td>POLYGON ((3.879862753261432 36.92634664178389,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>253167208</td>\n",
-       "      <td>150</td>\n",
+       "      <td>187</td>\n",
        "      <td>Algeria</td>\n",
        "      <td>Zemmouri</td>\n",
        "      <td>town</td>\n",
        "      <td>36.786406</td>\n",
        "      <td>3.601221</td>\n",
-       "      <td>POLYGON ((3.555512812300016 36.81191901602259,...</td>\n",
+       "      <td>POLYGON ((3.879862753261432 36.92634664178389,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>253291208</td>\n",
-       "      <td>436</td>\n",
+       "      <td>1530</td>\n",
        "      <td>Algeria</td>\n",
        "      <td>Lakhdaria</td>\n",
        "      <td>town</td>\n",
        "      <td>36.563944</td>\n",
        "      <td>3.596907</td>\n",
-       "      <td>POLYGON ((3.548917172615572 36.58325611006445,...</td>\n",
+       "      <td>POLYGON ((3.52630149841732 36.592046118739, 3....</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      osm_id   FID  country         city osm_type        lat       lon  \\\n",
-       "0   89369215  5382  Algeria  Tamanrasset     town  22.785454  5.532446   \n",
-       "1  252600742   624  Algeria    Boumerdès     town  36.758882  3.470596   \n",
-       "2  253167052   195  Algeria       Thenia     town  36.724986  3.556935   \n",
-       "3  253167208   150  Algeria     Zemmouri     town  36.786406  3.601221   \n",
-       "4  253291208   436  Algeria    Lakhdaria     town  36.563944  3.596907   \n",
+       "      osm_id    FID  country         city osm_type        lat       lon  \\\n",
+       "0   89369215  16863  Algeria  Tamanrasset     town  22.785454  5.532446   \n",
+       "1  252600742    187  Algeria    Boumerdès     town  36.758882  3.470596   \n",
+       "2  253167052    187  Algeria       Thenia     town  36.724986  3.556935   \n",
+       "3  253167208    187  Algeria     Zemmouri     town  36.786406  3.601221   \n",
+       "4  253291208   1530  Algeria    Lakhdaria     town  36.563944  3.596907   \n",
        "\n",
        "                                            geometry  \n",
-       "0  POLYGON ((5.512930562910484 22.80475188764244,...  \n",
-       "1  POLYGON ((2.960095682991406 36.82071885667166,...  \n",
-       "2  POLYGON ((3.610972972741118 36.75033076389462,...  \n",
-       "3  POLYGON ((3.555512812300016 36.81191901602259,...  \n",
-       "4  POLYGON ((3.548917172615572 36.58325611006445,...  "
+       "0  POLYGON ((5.523842554283844 22.82143812548671,...  \n",
+       "1  POLYGON ((3.879862753261432 36.92634664178389,...  \n",
+       "2  POLYGON ((3.879862753261432 36.92634664178389,...  \n",
+       "3  POLYGON ((3.879862753261432 36.92634664178389,...  \n",
+       "4  POLYGON ((3.52630149841732 36.592046118739, 3....  "
       ]
      },
      "execution_count": 6,
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
        "(5854, 8)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
        "(4951, 8)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
