--- a/notebooks/jupyter/New_Zonal_Stats.ipynb
+++ b/notebooks/jupyter/New_Zonal_Stats.ipynb
@@ -581,16 +581,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.7/site-packages/rasterstats/io.py:294: UserWarning: Setting nodata to -999; specify nodata explicitly\n",
+      "  warnings.warn(\"Setting nodata to -999; specify nodata explicitly\")\n"
+     ]
+    }
+   ],
    "source": [
     "aez_class = zone_mode(aezraster_zeros, 1, poly_gpd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,20 +616,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6229"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(cat)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>osm_id</th>\n",
+       "      <th>FID</th>\n",
+       "      <th>country</th>\n",
+       "      <th>city</th>\n",
+       "      <th>osm_type</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>lon</th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>PopTot</th>\n",
+       "      <th>aez_class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>89369215</td>\n",
+       "      <td>16863</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Tamanrasset</td>\n",
+       "      <td>town</td>\n",
+       "      <td>22.785454</td>\n",
+       "      <td>5.532446</td>\n",
+       "      <td>POLYGON ((5.523842554283844 22.82143812548671,...</td>\n",
+       "      <td>9.709929e+04</td>\n",
+       "      <td>Tropic - cool / arid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>252600742</td>\n",
+       "      <td>187</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Boumerdès</td>\n",
+       "      <td>town</td>\n",
+       "      <td>36.758882</td>\n",
+       "      <td>3.470596</td>\n",
+       "      <td>POLYGON ((3.879862753261432 36.92634664178389,...</td>\n",
+       "      <td>6.772831e+06</td>\n",
+       "      <td>Subtropic - warm / subhumid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>253167052</td>\n",
+       "      <td>187</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Thenia</td>\n",
+       "      <td>town</td>\n",
+       "      <td>36.724986</td>\n",
+       "      <td>3.556935</td>\n",
+       "      <td>POLYGON ((3.879862753261432 36.92634664178389,...</td>\n",
+       "      <td>6.772831e+06</td>\n",
+       "      <td>Subtropic - warm / subhumid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>253167208</td>\n",
+       "      <td>187</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Zemmouri</td>\n",
+       "      <td>town</td>\n",
+       "      <td>36.786406</td>\n",
+       "      <td>3.601221</td>\n",
+       "      <td>POLYGON ((3.879862753261432 36.92634664178389,...</td>\n",
+       "      <td>6.772831e+06</td>\n",
+       "      <td>Subtropic - warm / subhumid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>253291208</td>\n",
+       "      <td>1530</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Lakhdaria</td>\n",
+       "      <td>town</td>\n",
+       "      <td>36.563944</td>\n",
+       "      <td>3.596907</td>\n",
+       "      <td>POLYGON ((3.52630149841732 36.592046118739, 3....</td>\n",
+       "      <td>5.279311e+04</td>\n",
+       "      <td>Subtropic - warm / subhumid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>253292622</td>\n",
+       "      <td>187</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>Draâ Ben Khedda</td>\n",
+       "      <td>town</td>\n",
+       "      <td>36.733332</td>\n",
+       "      <td>3.958769</td>\n",
+       "      <td>POLYGON ((3.879862753261432 36.92634664178389,...</td>\n",
+       "      <td>6.772831e+06</td>\n",
+       "      <td>Subtropic - warm / subhumid</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      osm_id    FID  country             city osm_type        lat       lon  \\\n",
+       "0   89369215  16863  Algeria      Tamanrasset     town  22.785454  5.532446   \n",
+       "1  252600742    187  Algeria        Boumerdès     town  36.758882  3.470596   \n",
+       "2  253167052    187  Algeria           Thenia     town  36.724986  3.556935   \n",
+       "3  253167208    187  Algeria         Zemmouri     town  36.786406  3.601221   \n",
+       "4  253291208   1530  Algeria        Lakhdaria     town  36.563944  3.596907   \n",
+       "5  253292622    187  Algeria  Draâ Ben Khedda     town  36.733332  3.958769   \n",
+       "\n",
+       "                                            geometry        PopTot  \\\n",
+       "0  POLYGON ((5.523842554283844 22.82143812548671,...  9.709929e+04   \n",
+       "1  POLYGON ((3.879862753261432 36.92634664178389,...  6.772831e+06   \n",
+       "2  POLYGON ((3.879862753261432 36.92634664178389,...  6.772831e+06   \n",
+       "3  POLYGON ((3.879862753261432 36.92634664178389,...  6.772831e+06   \n",
+       "4  POLYGON ((3.52630149841732 36.592046118739, 3....  5.279311e+04   \n",
+       "5  POLYGON ((3.879862753261432 36.92634664178389,...  6.772831e+06   \n",
+       "\n",
+       "                     aez_class  \n",
+       "0         Tropic - cool / arid  \n",
+       "1  Subtropic - warm / subhumid  \n",
+       "2  Subtropic - warm / subhumid  \n",
+       "3  Subtropic - warm / subhumid  \n",
+       "4  Subtropic - warm / subhumid  \n",
+       "5  Subtropic - warm / subhumid  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "poly_gpd['aez_class'] = gpd.GeoDataFrame.from_dict(cat)\n",
     "poly_gpd.head(6)"
@@ -628,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
