--- a/notebooks/jupyter/New_PolyPoints.ipynb
+++ b/notebooks/jupyter/New_PolyPoints.ipynb
@@ -1467,7 +1467,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "poly_overlap_out.to_file(temp_data+'GHS_POP_GPW42000_GLOBE_R2015A_54009_1k_v1_0_Clip_1500c300_subB2.shp', driver='ESRI Shapefile')"
+    "#poly_overlap_out.to_file(temp_data+'GHS_POP_GPW42000_GLOBE_R2015A_54009_1k_v1_0_Clip_1500c300_subB2.shp', driver='ESRI Shapefile')"
    ]
   }
  ],
